--- a/electronica.html
+++ b/electronica.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog de Tecnología</title>
-    <link rel="icon" href="media/imagen9.png" type="image/png">
+    <link rel="icon" href="media/imagen29.png" type="image/png">
     <script src="https://kit.fontawesome.com/9474e300a6.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -61,6 +61,10 @@
         <div class="article-section">
             <img src="media/imagen1.png" alt="Diodo" class="article-image">
             <h2><a href="electronica/diodo.html">Diodo</a></h2>
+        </div> 
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Transistor" class="article-image">
+            <h2><a href="electronica/transistor.html">Transistor</a></h2>
         </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
