--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -38,7 +38,30 @@
         <div class="cover">
             <div class="text__articulo-cover">
                 <h1>Transistor</h1>
-                <p></p>
+                <p>Antes de la invención del transistor, los sistemas electrónicos se basaban en bulbos de vacío o válvulas termoiónicas. Estos dispositivos eran usados en radios, computadoras y equipos de telecomunicaciones para amplificar señales eléctricas y actuar como interruptores. Sin embargo, los bulbos tenían grandes desventajas: eran grandes, consumían mucha energía, generaban mucho calor y eran frágiles, lo que los hacía propensos a fallos frecuentes. Además, su tamaño limitaba la miniaturización de los dispositivos electrónicos. Además, su vida útil era limitada. La necesidad de una alternativa más eficiente impulsó la búsqueda de nuevos dispositivos. En 1947, los científicos de Bell Labs, John Bardeen, Walter Brattain y William Shockley, crearon el primer transistor, una pequeña pieza de silicio capaz de amplificar y conmutar señales de manera mucho más eficiente. Esta tecnología permitió el desarrollo de computadoras portátiles, teléfonos móviles y una amplia gama de dispositivos electrónicos, lo que dio lugar a la era digital en la que vivimos.</p>
+                <div class="blog-image">
+                    <img src="media/transistor1.png" alt="">
+                </div>
+                <h2>El Material Ideal</h2>
+                <p>El silicio se convirtió rápidamente en el material preferido para la fabricación de transistores, debido a sus propiedades únicas como semiconductor. Un semiconductor es un material que tiene una conductividad eléctrica intermedia entre la de los conductores (como los metales) y los aislantes (como el vidrio). El silicio es abundante, relativamente barato y presenta una banda de energía que permite controlar su conductividad con facilidad mediante el proceso de dopado.</p>
+                <p>Además, el silicio tiene una alta capacidad para soportar temperaturas elevadas en comparación con otros semiconductores como el germanio, lo que lo hace ideal para dispositivos que deben operar en condiciones extremas.</p>
+                <p>El silicio, en su forma pura, no es un conductor eficiente de electricidad. Para mejorar sus propiedades, se somete a un proceso llamado dopado, que consiste en añadir pequeñas cantidades de impurezas al silicio para modificar su conductividad. Existen dos tipos de dopado:</p>
+                <ul>
+                    <li><marcador class="resaltado8">Dopado tipo n: </marcador>Se introduce un elemento como el fósforo o el arsénico, que tiene un electrón extra en su capa más externa. Este electrón adicional queda libre para moverse, creando una región con exceso de electrones, o carga negativa.</li>
+                    <li><marcador class="resaltado8">Dopado tipo p: </marcador>Se agrega un elemento como el boro, que tiene un electrón menos en su capa externa, lo que crea huecos (es decir, la ausencia de electrones). Estos huecos actúan como portadores de carga positiva.</li>
+                </ul>
+                <div class="blog-image">
+                    <img src="media/transistor2.jpg" alt="">
+                </div>
+                <h2>Unión p-n: Funcionamiento en Polarización Directa e Inversa</h2>
+                <p>El corazón de un transistor se encuentra en la unión p-n, una interfaz entre una región dopada tipo p y una región dopada tipo n. Dependiendo de cómo se conecte un voltaje externo, la unión p-n puede funcionar de dos maneras:</p>
+                <ul>
+                    <li><marcador class="resaltado8">Polarización directa: </marcador>Si se conecta la región p a un potencial positivo y la región n a uno negativo, los electrones en la región n y los huecos en la región p son empujados hacia la unión. Esto reduce la barrera de potencial, permitiendo que la corriente fluya a través del dispositivo. En este modo, el transistor actúa como un conductor.</li>
+                    <li><marcador class="resaltado8">Polarización inversa: </marcador>Si se conecta la región p a un potencial negativo y la región n a uno positivo, los electrones y huecos son alejados de la unión, aumentando la barrera de potencial y evitando el flujo de corriente. En este modo, el transistor actúa como un aislante.</li>
+                </ul>
+                <div class="blog-image">
+                    <img src="media/transistor3.jpg" alt="">
+                </div>
             </div>  
         </div>     
     </main>
