--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -159,9 +159,12 @@
                         <li>Importancia práctica: Cuanto menor sea la capacitancia de entrada, más rápido podrá operar el transistor, lo que es fundamental en aplicaciones de conmutación de alta velocidad.</li>
                     </ul>
                 </ol>
+                <div class="blog-image">
+                    <img src="media/transistor0.png" alt="">
+                </div>
                 <p>El transistor 2N2222 es uno de los más ampliamente utilizados en aplicaciones como amplificadores de baja potencia, conmutación de pequeñas cargas (LEDs, relés, motores), osciladores, generadores de señal, circuitos de control y lógica discreta, así como en modulación y demodulación en comunicaciones. También es popular en proyectos DIY y prototipos debido a su bajo costo, alta disponibilidad y confiabilidad. Su capacidad para manejar hasta 800 mA y operar a frecuencias moderadas lo hace versátil en una amplia variedad de circuitos.</p>
                 <p>Puedes consultar el datasheet del 2N2222 en <a href="https://www.alldatasheet.com/datasheet-pdf/pdf/15067/PHILIPS/2N2222.html" target="blank">alldatasheet</a>.</p>
-                <div class="blog-image-grande">
+                <div class="blog-image">
                     <img src="media/transistor6.png" alt="">
                 </div>
                 <h2>Parámetros</h2>
