--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -39,7 +39,7 @@
         <div class="cover">
             <div class="text__articulo-cover">
                 <h1>Transistor</h1>
-                <p>Antes de la invención del transistor, los sistemas electrónicos se basaban en bulbos de vacío o válvulas termoiónicas. Estos dispositivos eran usados en radios, computadoras y equipos de telecomunicaciones para amplificar señales eléctricas y actuar como interruptores. Sin embargo, los bulbos tenían grandes desventajas: eran grandes, consumían mucha energía, generaban mucho calor y eran frágiles, lo que los hacía propensos a fallos frecuentes. Además, su tamaño limitaba la miniaturización de los dispositivos electrónicos. Además, su vida útil era limitada. La necesidad de una alternativa más eficiente impulsó la búsqueda de nuevos dispositivos. En 1947, los científicos de Bell Labs, John Bardeen, Walter Brattain y William Shockley, crearon el primer transistor, una pequeña pieza de silicio capaz de amplificar y conmutar señales de manera mucho más eficiente. Esta tecnología permitió el desarrollo de computadoras portátiles, teléfonos móviles y una amplia gama de dispositivos electrónicos, lo que dio lugar a la era digital en la que vivimos.</p>
+                <p>Antes de la invención del transistor, los sistemas electrónicos se basaban en bulbos de vacío o válvulas termoiónicas. Estos dispositivos eran usados en radios, computadoras y equipos de telecomunicaciones para amplificar señales eléctricas y actuar como interruptores. Sin embargo, los bulbos tenían grandes desventajas: eran grandes, consumían mucha energía, generaban mucho calor y eran frágiles, lo que los hacía propensos a fallos frecuentes. Además, su tamaño limitaba la miniaturización de los dispositivos electrónicos y su vida útil era limitada. La necesidad de una alternativa más eficiente impulsó la búsqueda de nuevos dispositivos. En 1947, los científicos de Bell Labs, John Bardeen, Walter Brattain y William Shockley, crearon el primer transistor, una pequeña pieza de silicio capaz de amplificar y conmutar señales de manera mucho más eficiente. Esta tecnología permitió el desarrollo de computadoras portátiles, teléfonos móviles y una amplia gama de dispositivos electrónicos, lo que dio lugar a la era digital en la que vivimos.</p>
                 <div class="blog-image">
                     <img src="media/transistor1.png" alt="">
                 </div>
@@ -216,10 +216,12 @@
                 <p><marcador class="resaltado8">Ventajas:</marcador> Estabilidad máxima frente a variaciones en \( β \) y temperatura. Control preciso del punto de operación.</p>
                 <p><marcador class="resaltado8">Desventajas:</marcador> Requiere más componentes (varias resistencias), lo que puede aumentar el costo y la complejidad del circuito.</p>
                 <p>Esta configuración es ideal para amplificadores, ya que permite mantener un punto de operación estable incluso cuando hay cambios en las condiciones del transistor.</p>
-                <p>Cada tipo de polarización de transistores ofrece diferentes niveles de estabilidad y complejidad. En general, la polarización de base fija es la más simple pero menos estable, mientras que la polarización con divisor de voltaje ofrece la mejor estabilidad a expensas de una mayor complejidad de diseño. La elección de la configuración adecuada dependerá de las necesidades específicas del circuito y de la estabilidad deseada para el punto de operación del transistor.</p>
                 <div class="blog-image">
                     <img src="media/transistor11.png" alt="">
                 </div>
+                <p>Cada tipo de polarización de transistores ofrece diferentes niveles de estabilidad y complejidad. En general, la polarización de base fija es la más simple pero menos estable, mientras que la polarización con divisor de voltaje ofrece la mejor estabilidad a expensas de una mayor complejidad de diseño. La elección de la configuración adecuada dependerá de las necesidades específicas del circuito y de la estabilidad deseada para el punto de operación del transistor.</p>
+                <br>
+                <br>
             </div>  
         </div>     
     </main>
