--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -362,6 +362,7 @@
                 <div class="blog-image">
                     <img src="media/transistor14.png" alt="">
                 </div>
+                <p>En el circuito mostrado, tenemos un transistor NPN en configuración de base común, conectado a una fuente de voltaje \(V_i = 200 \, mV\). La resistencia de entrada \(R_i = 20 \, \Omega\) se utiliza para limitar la corriente de entrada al transistor. La resistencia de carga es de \(5K \, \Omega\) y la corriente de salida \(I_L\) se mide a través de esta resistencia. El objetivo es determinar los valores de \(I_L\), \(V_L\) y \(I_i\) en este circuito.</p>
                 <p><marcador class="resaltado8">Datos:</marcador></p>
                 <p>- Resistencia de carga \( R_L = 5 \, k\Omega \)<br>
                 - Resistencia de entrada \( R_i = 20 \, \Omega \)<br>
@@ -430,6 +431,35 @@
                         <img src="media/transistor17.jpg" alt="">
                     </div>
                 </ol>
+                <h2>Modelo Equivalente de Parámetros h</h2>
+                <p>En el estudio de los transistores bipolares de juntura, es fundamental entender el modelo equivalente en configuración de emisor común, especialmente para el análisis de pequeñas señales. Este modelo se representa a menudo como un circuito que incluye componentes específicos que caracterizan el comportamiento del transistor.</p>
+                <p>El modelo equivalente incluye la resistencia de entrada <em>h<sub>ie</sub></em> y la conductancia de salida <em>h<sub>oe</sub></em>, junto con la ganancia <em>h<sub>fe</sub></em>. En este contexto, <em>h<sub>ie</sub></em> representa la resistencia de entrada del transistor, que indica cuánta resistencia presenta el transistor frente a la señal de entrada. Por otro lado, <em>h<sub>oe</sub></em> se refiere a la conductancia de salida, que es una medida de cómo el transistor permite que la corriente fluya a través de él cuando se presenta una señal de salida. Finalmente, <em>h<sub>fe</sub></em> es la ganancia del transistor en términos de señal, indicando cuántas veces se amplifica la corriente de entrada en la salida.</p>
+                <p>Este modelo se conoce como "Modelo Híbrido π" o "Modelo de Parámetros h", y es esencial para el análisis de circuitos que utilizan transistores en aplicaciones de amplificación. Al emplear este modelo, los ingenieros pueden predecir el comportamiento del transistor en condiciones de operación específicas, lo que resulta crucial para el diseño y optimización de circuitos electrónicos.</p>
+                <div class="blog-image-grande">
+                    <img src="media/transistor19.png" alt="">
+                </div>
+                <p>Este circuito ilustra la configuración de un transistor en modo divisor de voltaje. La señal de entrada se aplica a la base del transistor, donde se espera que la corriente se amplifique. A través de una serie de componentes pasivos, como resistencias y capacitores, donde se establece un punto de operación que permite que el transistor funcione adecuadamente dentro de sus límites. Este tipo de montaje es común en diversos circuitos electrónicos donde se requiere un manejo efectivo de las señales eléctricas.</p>
+                <div class="blog-image-grande">
+                    <img src="media/transistor20.png" alt="">
+                </div>
+                <p>Al finalizar el análisis del circuito, se puede representar el modelo equivalente de manera que refleje el comportamiento del transistor y las interacciones entre los componentes. Este modelo simplificado permite visualizar cómo las corrientes y voltajes se distribuyen dentro del circuito.</p>
+                <div class="blog-image-grande">
+                    <img src="media/transistor21.png" alt="">
+                </div>
+                <h6>Cálculo</h6>
+                <p>En el circuito presentado, se observa la configuración de un transistor conectado a varios componentes pasivos, incluyendo resistencias y fuentes de voltaje. El objetivo es analizar el comportamiento del circuito mediante la creación de un modelo equivalente que simplifique su funcionamiento. Este modelo nos permitirá identificar las relaciones entre las corrientes y voltajes presentes, facilitando el estudio de su rendimiento en diferentes condiciones de operación.</p>
+                <div class="blog-image-grande">
+                    <img src="media/transistor22.png" alt="">
+                </div>
+                <div class="blog-image-grande">
+                    <img src="media/transistor23.png" alt="">
+                </div>
+                <div class="blog-image-grande">
+                    <img src="media/transistor24.png" alt="">
+                </div>
+                <div class="blog-image-grande">
+                    <img src="media/transistor25.png" alt="">
+                </div>
             </div>  
         </div>     
     </main>
