--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -258,29 +258,29 @@
                     <img src="media/transistor12.png" alt="">
                 </div>
                 <p>En el circuito mostrado, tenemos un transistor NPN polarizado con una fuente de voltaje de \(V_{CC} = 12V\). Sabemos que la corriente de base \(I_B = 40 \, \mu A\) y el factor de ganancia de corriente del transistor es \( \beta = 80 \). Además, el transistor es de silicio, por lo que asumimos que la caída de voltaje en la unión base-emisor es \(V_{BE} = 0.7V\). El objetivo es encontrar los valores de \(I_C\), \(R_B\), \(R_C\) y \(V_{CE}\).</p>
-                <p>
-                <marcador class="resaltado8">Datos:</marcador><br>
-                - \(V_{CC} = 12V\)<br>
-                - \(I_B = 40 \, \mu A = 40 \times 10^{-6} A\)<br>
-                - \( \beta = 80 \)<br>
-                - \( V_{CE} = 6V\) (dado en el circuito)<br>
-                - \( V_{BE} = 0.7V\) (transistor de silicio)
-                </p>
+                <p><marcador class="resaltado8">Datos:</marcador></p>
+                <ul>
+                    <li><marcador class="resaltado5">\(V_{CC} = 12V\)</marcador></li>
+                    <li><marcador class="resaltado5">\(I_B = 40 \, \mu A = 40 \times 10^{-6} A\)</marcador></li>
+                    <li><marcador class="resaltado5">\( \beta = 80 \)</marcador></li>
+                    <li><marcador class="resaltado5">\( V_{CE} = 6V\) (dado en el circuito)</marcador></li>
+                    <li><marcador class="resaltado5">\( V_{BE} = 0.7V\) (transistor de silicio)</marcador></li>
+                </ul>
                 <p><marcador class="resaltado8">Solución:</marcador></p>
                 
-                <p>1. <marcador class="resaltado8">Cálculo de \(I_C\) (corriente de colector):</marcador></p>
+                <p>1. <marcador class="resaltado4">Cálculo de \(I_C\) (corriente de colector):</marcador></p>
                 <p>Sabemos que la corriente de colector \(I_C\) está relacionada con la corriente de base \(I_B\) mediante la fórmula:</p>
                 <p>\[ I_C = \beta \cdot I_B \]</p>
                 <p>Sustituyendo los valores conocidos:</p>
                 <p>\[ I_C = 80 \times 40 \times 10^{-6} = 3.2 \, mA \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( I_C = 3.2 \, mA \)</marcador></p>
-                <p> 2. <marcador class="resaltado8">Cálculo de \(R_C\) (resistencia del colector):</marcador></p>
+                <p> 2. <marcador class="resaltado4">Cálculo de \(R_C\) (resistencia del colector):</marcador></p>
                 <p>La caída de voltaje en la resistencia del colector \(R_C\) es:</p>
                 <p>\[ V_{RC} = V_{CC} - V_{CE} = 12V - 6V = 6V \]</p>
                 <p>Aplicando la ley de Ohm para \(R_C\):</p>
                 <p>\[ R_C = \frac{V_{RC}}{I_C} = \frac{6V}{3.2 \times 10^{-3} A} = 1875 \, \Omega \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( R_C = 1875 \, \Omega \)</marcador></p>
-                <p>3. <marcador class="resaltado8">Cálculo de \(R_B\) (resistencia de la base):</marcador></p>
+                <p>3. <marcador class="resaltado4">Cálculo de \(R_B\) (resistencia de la base):</marcador></p>
                 <p>La tensión en la resistencia \(R_B\) es:</p>
                 <p>\[ V_{RB} = V_{CC} - V_{BE} = 12V - 0.7V = 11.3V \]</p>
                 <p>Aplicando la ley de Ohm para \(R_B\):</p>
@@ -297,57 +297,58 @@
                     <img src="media/transistor13.png" alt="">
                 </div>
                 <p>En el circuito mostrado, tenemos un transistor NPN polarizado con una fuente de voltaje de \(V_{CC} = 10.6V\). Sabemos que la corriente de base \(I_B = 20 \, \mu A\) y el factor de ganancia de corriente del transistor es \( \beta = 100 \). Además, el transistor es de silicio, por lo que asumimos que la caída de voltaje en la unión base-emisor es \(V_{BE} = 0.7V\). El objetivo es encontrar los valores de \(I_C\), \(V_E\), \(V_{CC}\), \(V_{CE}\), \(V_B\) y \(R_1\).</p>
-                <p>
-                <marcador class="resaltado8">Datos:</marcador><br>
-                - \(V_{CC} = 10.6V\)<br>
-                - \(I_B = 20 \, \mu A = 20 \times 10^{-6} A\)<br>
-                - \( \beta = 100 \)<br>
-                - \( V_{BE} = 0.7V\) (transistor de silicio)<br>
-                - Resistencia \(R_2 = 8.2k\Omega\) y \(R_1 = 2.7k\Omega\) (dadas en el circuito)
-                </p>
+                <p><marcador class="resaltado8">Datos:</marcador></p>
+                <ul>
+                    <li><marcador class="resaltado5">\(V_{CC} = 10.6V\)</marcador></li>
+                    <li><marcador class="resaltado5">\(I_B = 20 \, \mu A = 20 \times 10^{-6} A\)</marcador></li>
+                    <li><marcador class="resaltado5">\( \beta = 100 \)</marcador></li>
+                    <li><marcador class="resaltado5">\( V_{BE} = 0.7V\) (transistor de silicio)</marcador></li>
+                    <li><marcador class="resaltado5">Resistencia \(R_2 = 8.2k\Omega\) y \(R_1 = 2.7k\Omega\) (dadas en el circuito)</marcador></li>
+                </ul>
+
                 <p><marcador class="resaltado8">Solución:</marcador></p>
-                <p>1. <marcador class="resaltado8">Cálculo de \(I_C\) (corriente de colector):</marcador></p>
+                <p>1. <marcador class="resaltado4">Cálculo de \(I_C\) (corriente de colector):</marcador></p>
                 <p>Sabemos que la corriente de colector \(I_C\) está relacionada con la corriente de base \(I_B\) mediante la fórmula:</p>
                 <p>\[ I_C = \beta \cdot I_B \]</p>
                 <p>Sustituyendo los valores conocidos:</p>
                 <p>\[ I_C = 100 \times 20 \times 10^{-6} = 2 \, mA \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( I_C = 2 \, mA \)</marcador></p>
-                <p>2. <marcador class="resaltado8">Cálculo de \(V_E\) (voltaje en el emisor):</marcador></p>
+                <p>2. <marcador class="resaltado4">Cálculo de \(V_E\) (voltaje en el emisor):</marcador></p>
                 <p>Para calcular \(V_E\), necesitamos conocer \(I_E\), que está dado por:</p>
                 <p>\[ I_E = I_C + I_B \]</p>
                 <p>\[ I_E \approx I_C \] (considerando que \(I_E \approx I_C\) para un transistor en activo)</p>
                 <p>La resistencia en el emisor \(R_E = 1.2k\Omega\) (dada en el circuito). Entonces:</p>
                 <p>\[ V_E = I_E \cdot R_E = 2 \times 10^{-3} A \cdot 1.2 \times 10^{3} \Omega = 2.4 V \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( V_E = 2.4 V \)</marcador></p>
-                <p>3. <marcador class="resaltado8">Cálculo de \(V_{CC}\):</marcador></p>
+                <p>3. <marcador class="resaltado4">Cálculo de \(V_{CC}\):</marcador></p>
                 <p>La caída de voltaje en la resistencia del colector \(R_C\) se calcula usando la ley de Ohm:</p>
                 <p>\[ V_{RC} = I_C \cdot R_C = 2 \times 10^{-3} A \cdot 2.7 \times 10^{3} \Omega = 5.4 V \]</p>
                 <p>Entonces, el voltaje total \(V_{CC}\) se calcula como:</p>
                 <p>\[ V_{CC} = V_C + V_{RC} = 10.6V + 5.4V = 16.0V \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( V_{CC} = 16.0V \)</marcador></p>
-                <p>4. <marcador class="resaltado8">Cálculo de \(V_{CE}\) (voltaje colector-emisor):</marcador></p>
+                <p>4. <marcador class="resaltado4">Cálculo de \(V_{CE}\) (voltaje colector-emisor):</marcador></p>
                 <p>La caída de voltaje en el colector se puede calcular como:</p>
                 <p>\[ V_{CE} = V_C - V_E \]</p>
                 <p>Donde \(V_C\) se puede estimar como \(V_{CC} - I_C \cdot R_C\). Asumiendo que el colector está conectado a \(V_{CC}\), podemos simplificarlo como \(V_C \approx 10.6V\) (suponiendo que no hay caída de voltaje significativa):</p>
                 <p>\[ V_{CE} = 10.6 V - 2.4 V = 8.2 V \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( V_{CE} = 8.2 V \)</marcador></p>
-                <p>5. <marcador class="resaltado8">Cálculo de \(V_B\) (voltaje en la base):</marcador></p>
+                <p>5. <marcador class="resaltado4">Cálculo de \(V_B\) (voltaje en la base):</marcador></p>
                 <p>El voltaje en la base \(V_B\) es:</p>
                 <p>\[ V_B = V_E + V_{BE} = 2.4 V + 0.7 V = 3.1 V \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( V_B = 3.1 V \)</marcador></p>
-                <p>6. <marcador class="resaltado8">Cálculo de \(R_1\) (resistencia superior del divisor de voltaje usando la Ley de Ohm y LCK):</marcador></p>
+                <p>6. <marcador class="resaltado4">Cálculo de \(R_1\) (resistencia superior del divisor de voltaje usando la Ley de Ohm y LCK):</marcador></p>
                 <p>Vamos a calcular \(R_1\) usando la Ley de Ohm y la Ley de Corriente de Kirchhoff (LCK), basándonos en la fórmula: 
                 \(R_1 = \frac{V_{R1}}{I_{R1}}\), donde \(V_{R1} = V_{CC} - V_B\).</p>
-                <p><marcador class="resaltado8">Paso 1:</marcador> Determinamos la caída de voltaje en \(R_1\) (\(V_{R1}\)): </p>
+                <p><marcador class="resaltado5">Paso 1:</marcador> Determinamos la caída de voltaje en \(R_1\) (\(V_{R1}\)): </p>
                 <p>\[ V_{R1} = V_{CC} - V_B = 16V - 3.1V = 12.9V \]</p>
-                <p><marcador class="resaltado8">Paso 2:</marcador> Aplicamos la Ley de Corriente de Kirchhoff (LCK) para determinar la corriente a través de \(R_1\) (\(I_{R1}\)):</p>
+                <p><marcador class="resaltado5">Paso 2:</marcador> Aplicamos la Ley de Corriente de Kirchhoff (LCK) para determinar la corriente a través de \(R_1\) (\(I_{R1}\)):</p>
                 <p>La corriente \(I_{R1}\) se divide entre la resistencia \(R_2\) y la corriente de base \(I_B\):</p>
                 <p>\[ I_{R1} = \frac{V_B}{R_2} + I_B \]</p>
                 <p>Sustituyendo los valores:</p>
                 <p>\[ I_{R1} = \frac{3.1V}{8200 \Omega} + 20 \times 10^{-6} A = 3.78 \times 10^{-4} A + 20 \times 10^{-6} A = 3.98 \times 10^{-4} A \]</p>
                 <p>Por lo tanto:</p>
                 <p>\[ I_{R1} = 398 \, \mu A \]</p>
-                <p><marcador class="resaltado8">Paso 3:</marcador> Ahora, calculamos \(R_1\) usando la Ley de Ohm:</p>
+                <p><marcador class="resaltado5">Paso 3:</marcador> Ahora, calculamos \(R_1\) usando la Ley de Ohm:</p>
                 <p>\[ R_1 = \frac{V_{R1}}{I_{R1}} = \frac{12.9V}{398 \times 10^{-6} A} = 32.41 k\Omega \]</p>
                 <p><marcador class="resaltado8">Conclusión:</marcador> El valor calculado de \(R_1\) es:</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( R_1 = 32.41 k\Omega \)</marcador></p>
@@ -359,32 +360,34 @@
                 <p>\(V_{CE} = 8.2 V\)</p>
                 <p>\(R_1 = 32.41 k\Omega\)</p>
                 <h6>Configuración base común</h6>
-                <div class="blog-image">
+                <div class="blog-image-grande">
                     <img src="media/transistor14.png" alt="">
                 </div>
                 <p>En el circuito mostrado, tenemos un transistor NPN en configuración de base común, conectado a una fuente de voltaje \(V_i = 200 \, mV\). La resistencia de entrada \(R_i = 20 \, \Omega\) se utiliza para limitar la corriente de entrada al transistor. La resistencia de carga es de \(5K \, \Omega\) y la corriente de salida \(I_L\) se mide a través de esta resistencia. El objetivo es determinar los valores de \(I_L\), \(V_L\) y \(I_i\) en este circuito.</p>
                 <p><marcador class="resaltado8">Datos:</marcador></p>
-                <p>- Resistencia de carga \( R_L = 5 \, k\Omega \)<br>
-                - Resistencia de entrada \( R_i = 20 \, \Omega \)<br>
-                - Voltaje de entrada \( V_i = 200 \, mV \)</p>
-                <p><marcador class="resaltado8">1. Cálculo de la corriente de entrada \( I_i \)</marcador></p>
+                <ul>
+                    <li><marcador class="resaltado5">Resistencia de carga \( R_L = 5 \, k\Omega \)</marcador></li>
+                    <li><marcador class="resaltado5">Resistencia de entrada \( R_i = 20 \, \Omega \)</marcador></li>
+                    <li><marcador class="resaltado5">Voltaje de entrada \( V_i = 200 \, mV \)</marcador></li>
+                </ul>
+                <p><marcador class="resaltado4">1. Cálculo de la corriente de entrada \( I_i \)</marcador></p>
                 <p>La corriente de entrada \( I_i \) se puede calcular usando la ley de Ohm para la resistencia de entrada \( R_i \):</p>
                 <p>\( I_i = \frac{V_i}{R_i} \)</p>
                 <p>Sustituyendo los valores proporcionados:</p>
                 <p>\( I_i = \frac{200 \, mV}{20 \, \Omega} = \frac{0.2 \, V}{20 \, \Omega} = 0.01 \, A = 10 \, mA \)</p>
                 <p><marcador class="resaltado7">\( I_i = 10 \, mA \)</marcador></p>
-                <p><marcador class="resaltado8">2. Cálculo de la corriente de carga \( I_L \)</marcador></p>
+                <p><marcador class="resaltado4">2. Cálculo de la corriente de carga \( I_L \)</marcador></p>
                 <p>En un transistor con configuración de base común, la corriente de colector \( I_C \) es aproximadamente igual a la corriente de entrada \( I_i \), ya que:</p>
                 <p>\( I_L \approx I_i \)</p>
                 <p>Por lo tanto, la corriente de carga \( I_L \) es:</p>
                 <p><marcador class="resaltado7">\( I_L \approx 10 \, mA \)</marcador></p>
-                <p><marcador class="resaltado8">3. Cálculo del voltaje en la carga \( V_L \)</marcador></p>
+                <p><marcador class="resaltado4">3. Cálculo del voltaje en la carga \( V_L \)</marcador></p>
                 <p>El voltaje en la carga \( V_L \) se puede calcular utilizando la ley de Ohm para la resistencia de carga \( R_L \):</p>
                 <p>\( V_L = I_L \times R_L \)</p>
                 <p>Sustituyendo los valores:</p>
                 <p>\( V_L = 10 \, mA \times 5 \, k\Omega = 0.01 \, A \times 5000 \, \Omega = 50 \, V \)</p>
                 <p><marcador class="resaltado7">\( V_L = 50 \, V \)</marcador></p>
-                <p><marcador class="resaltado8">4. Cálculo del factor de amplificación</marcador></p>
+                <p><marcador class="resaltado4">4. Cálculo del factor de amplificación</marcador></p>
                 <p>El factor de amplificación de voltaje \( A_V \) para la configuración de base común se puede calcular con la siguiente fórmula:</p>
                 <p>\( A_V = \frac{V_L}{V_i} \)</p>
                 <p>Sustituyendo los valores:</p>
@@ -432,7 +435,7 @@
                     </div>
                 </ol>
                 <h2>Modelo Equivalente de Parámetros h</h2>
-                <p>En el estudio de los transistores bipolares de juntura, es fundamental entender el modelo equivalente en configuración de emisor común, especialmente para el análisis de pequeñas señales. Este modelo se representa a menudo como un circuito que incluye componentes específicos que caracterizan el comportamiento del transistor.</p>
+                <p>En el estudio de los transistores bipolares de juntura, es fundamental entender el modelo equivalente, especialmente para el análisis de pequeñas señales. Este modelo se representa a menudo como un circuito que incluye componentes específicos que caracterizan el comportamiento del transistor.</p>
                 <p>El modelo equivalente incluye la resistencia de entrada <em>h<sub>ie</sub></em> y la conductancia de salida <em>h<sub>oe</sub></em>, junto con la ganancia <em>h<sub>fe</sub></em>. En este contexto, <em>h<sub>ie</sub></em> representa la resistencia de entrada del transistor, que indica cuánta resistencia presenta el transistor frente a la señal de entrada. Por otro lado, <em>h<sub>oe</sub></em> se refiere a la conductancia de salida, que es una medida de cómo el transistor permite que la corriente fluya a través de él cuando se presenta una señal de salida. Finalmente, <em>h<sub>fe</sub></em> es la ganancia del transistor en términos de señal, indicando cuántas veces se amplifica la corriente de entrada en la salida.</p>
                 <p>Este modelo se conoce como "Modelo Híbrido π" o "Modelo de Parámetros h", y es esencial para el análisis de circuitos que utilizan transistores en aplicaciones de amplificación. Al emplear este modelo, los ingenieros pueden predecir el comportamiento del transistor en condiciones de operación específicas, lo que resulta crucial para el diseño y optimización de circuitos electrónicos.</p>
                 <div class="blog-image-grande">
