--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -299,7 +299,7 @@
                 <p>En el circuito mostrado, tenemos un transistor NPN polarizado con una fuente de voltaje de \(V_{CC} = 10.6V\). Sabemos que la corriente de base \(I_B = 20 \, \mu A\) y el factor de ganancia de corriente del transistor es \( \beta = 100 \). Además, el transistor es de silicio, por lo que asumimos que la caída de voltaje en la unión base-emisor es \(V_{BE} = 0.7V\). El objetivo es encontrar los valores de \(I_C\), \(V_E\), \(V_{CC}\), \(V_{CE}\), \(V_B\) y \(R_1\).</p>
                 <p><marcador class="resaltado8">Datos:</marcador></p>
                 <ul>
-                    <li><marcador class="resaltado5">\(V_{CC} = 10.6V\)</marcador></li>
+                    <li><marcador class="resaltado5">\(V_{C} = 10.6V\)</marcador></li>
                     <li><marcador class="resaltado5">\(I_B = 20 \, \mu A = 20 \times 10^{-6} A\)</marcador></li>
                     <li><marcador class="resaltado5">\( \beta = 100 \)</marcador></li>
                     <li><marcador class="resaltado5">\( V_{BE} = 0.7V\) (transistor de silicio)</marcador></li>
@@ -345,7 +345,8 @@
                 <p>La corriente \(I_{R1}\) se divide entre la resistencia \(R_2\) y la corriente de base \(I_B\):</p>
                 <p>\[ I_{R1} = \frac{V_B}{R_2} + I_B \]</p>
                 <p>Sustituyendo los valores:</p>
-                <p>\[ I_{R1} = \frac{3.1V}{8200 \Omega} + 20 \times 10^{-6} A = 3.78 \times 10^{-4} A + 20 \times 10^{-6} A = 3.98 \times 10^{-4} A \]</p>
+                <p>\[ I_{R1} = \frac{3.1V}{8200 \Omega} + 20 \times 10^{-6} A \]</p>
+                <p>\[ I_{R1} = 3.78 \times 10^{-4} A + 20 \times 10^{-6} A = 3.98 \times 10^{-4} A \]</p>
                 <p>Por lo tanto:</p>
                 <p>\[ I_{R1} = 398 \, \mu A \]</p>
                 <p><marcador class="resaltado5">Paso 3:</marcador> Ahora, calculamos \(R_1\) usando la Ley de Ohm:</p>
