--- a/ia/pandas.html
+++ b/ia/pandas.html
@@ -62,6 +62,7 @@
                       <button><i class="fa fa-clone"></i><span> Copy</span></button>
                     </div>
                 </div>
+                <p>Aunque existen otros métodos para instalar Jupyter, como a través de Anaconda, la instalación mediante pip es directa y ligera. No necesitas descargar un archivo .exe ni realizar instalaciones complejas adicionales. Sin embargo, si no tienes experiencia configurando Python y sus paquetes en Windows, podrías encontrar más simple utilizar Anaconda, que viene con Jupyter preinstalado y gestiona las dependencias automáticamente.</p>
                 <div class="contenedor">
                     <div class="etiqueta">
                         Una vez instalado, puedes ejecutar Jupyter Notebooks ejecutando el siguiente comando en tu terminal:
