--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -346,7 +346,8 @@
                 <p>\[ I_{R1} = \frac{V_B}{R_2} + I_B \]</p>
                 <p>Sustituyendo los valores:</p>
                 <p>\[ I_{R1} = \frac{3.1V}{8200 \Omega} + 20 \times 10^{-6} A \]</p>
-                <p>\[ I_{R1} = 3.78 \times 10^{-4} A + 20 \times 10^{-6} A = 3.98 \times 10^{-4} A \]</p>
+                <p>\[ I_{R1} = 3.78 \times 10^{-4} A + 20 \times 10^{-6} A \]</p>
+                <p>\[ I_{R1} = 3.98 \times 10^{-4} A \]</p>
                 <p>Por lo tanto:</p>
                 <p>\[ I_{R1} = 398 \, \mu A \]</p>
                 <p><marcador class="resaltado5">Paso 3:</marcador> Ahora, calculamos \(R_1\) usando la Ley de Ohm:</p>
