--- a/electronica/transistor.html
+++ b/electronica/transistor.html
@@ -318,11 +318,13 @@
                 <p>\[ I_E = I_C + I_B \]</p>
                 <p>\[ I_E \approx I_C \] (considerando que \(I_E \approx I_C\) para un transistor en activo)</p>
                 <p>La resistencia en el emisor \(R_E = 1.2k\Omega\) (dada en el circuito). Entonces:</p>
-                <p>\[ V_E = I_E \cdot R_E = 2 \times 10^{-3} A \cdot 1.2 \times 10^{3} \Omega = 2.4 V \]</p>
+                <p>\[ V_E = I_E \cdot R_E = 2 \times 10^{-3} A \cdot 1.2 \times 10^{3} \Omega \]</p>
+                <p>\[ V_E = 2.4 V \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( V_E = 2.4 V \)</marcador></p>
                 <p>3. <marcador class="resaltado4">Cálculo de \(V_{CC}\):</marcador></p>
                 <p>La caída de voltaje en la resistencia del colector \(R_C\) se calcula usando la ley de Ohm:</p>
-                <p>\[ V_{RC} = I_C \cdot R_C = 2 \times 10^{-3} A \cdot 2.7 \times 10^{3} \Omega = 5.4 V \]</p>
+                <p>\[ V_{RC} = I_C \cdot R_C = 2 \times 10^{-3} A \cdot 2.7 \times 10^{3} \Omega \]</p>
+                <p>\[ V_{RC} = 5.4 V \]</p>
                 <p>Entonces, el voltaje total \(V_{CC}\) se calcula como:</p>
                 <p>\[ V_{CC} = V_C + V_{RC} = 10.6V + 5.4V = 16.0V \]</p>
                 <p style="text-align: center;"><marcador class="resaltado7">\( V_{CC} = 16.0V \)</marcador></p>
@@ -387,7 +389,7 @@
                 <p>El voltaje en la carga \( V_L \) se puede calcular utilizando la ley de Ohm para la resistencia de carga \( R_L \):</p>
                 <p>\( V_L = I_L \times R_L \)</p>
                 <p>Sustituyendo los valores:</p>
-                <p>\( V_L = 10 \, mA \times 5 \, k\Omega = 0.01 \, A \times 5000 \, \Omega = 50 \, V \)</p>
+                <p>\( V_L = 10 \, mA \times 5 \, k\Omega = 0.01 \, A \times 5000 \, \Omega \)</p>
                 <p><marcador class="resaltado7">\( V_L = 50 \, V \)</marcador></p>
                 <p><marcador class="resaltado4">4. Cálculo del factor de amplificación</marcador></p>
                 <p>El factor de amplificación de voltaje \( A_V \) para la configuración de base común se puede calcular con la siguiente fórmula:</p>
